--- a/dropmenu/dropmenu.css
+++ b/dropmenu/dropmenu.css
@@ -17,7 +17,7 @@
 
 .dropdown-content a {
     color: black;
-	font-size:1em;
+	/*font-size:1em;*/
     padding: 12px 16px;
     text-decoration: none;
     display: block;
