--- a/default.css
+++ b/default.css
@@ -1,5 +1,5 @@
 html {
-    font-size: 1.2em;
+    font-size: 1.1em;
     background-color:gray;
 }
 
@@ -10,9 +10,12 @@ body {
     background-color:white;
     /*max-width: 980px;*/
     margin: 0 auto;
-    padding: 30px;
+    padding: 20px;
 }
 
+table {
+    width: 100%;
+}
 @media only screen and (min-width: 1400px) {
     body {
         max-width: 1024px;
