--- a/lightform/lightform.css
+++ b/lightform/lightform.css
@@ -1,5 +1,5 @@
 
-input[type=text], select {
+input[type=text], input[type=number],input[type=file],select {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -7,9 +7,11 @@ input[type=text], select {
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+  font-size: 1em;
 }
 
 input[type=submit] {
+  font-size: 1em;
   width: 100%;
   background-color: #4CAF50;
   color: white;
